--- a/Wpf/WpfText.no.resx
+++ b/Wpf/WpfText.no.resx
@@ -590,10 +590,6 @@ Hvis en del av denne avtalen ikke kan håndheves, skal resten være gyldig. Det 
     <value>Person visninger</value>
     <comment>from GoogleTranslator2</comment>
   </data>
-  <data name="HeaderStartup" xml:space="preserve">
-    <value>Oppstart</value>
-    <comment>from GoogleTranslator2</comment>
-  </data>
   <data name="HeaderTimeSliceViews" xml:space="preserve">
     <value>Time Slice Views.</value>
     <comment>from GoogleTranslator2</comment>
@@ -754,10 +750,6 @@ Klikk eller trykk på Neste for å fortsette.</value>
     <value>Krypter database</value>
     <comment>from GoogleTranslator2</comment>
   </data>
-  <data name="LabelGeneral" xml:space="preserve">
-    <value>Generell</value>
-    <comment>from GoogleTranslator2</comment>
-  </data>
   <data name="LabelOptions" xml:space="preserve">
     <value>Alternativer</value>
     <comment>from GoogleTranslator2</comment>
@@ -768,10 +760,6 @@ Klikk eller trykk på Neste for å fortsette.</value>
   </data>
   <data name="LabelSelectDatabase" xml:space="preserve">
     <value>Velg database</value>
-    <comment>from GoogleTranslator2</comment>
-  </data>
-  <data name="LabelStartGrindstoneWithWindows" xml:space="preserve">
-    <value>Start Grindstone med Windows</value>
     <comment>from GoogleTranslator2</comment>
   </data>
   <data name="LabelThrowException" xml:space="preserve">
@@ -873,6 +861,66 @@ Klikk eller trykk på Neste for å fortsette.</value>
   <data name="OperationEditorControlValueHint" xml:space="preserve">
     <value>Verdi</value>
     <comment>from GoogleTranslator2</comment>
+  </data>
+  <data name="OptionsDialogAutomaticallyDownloadUpdates" xml:space="preserve">
+    <value>Last ned oppdateringer automatisk når du sjekker inn mens du ikke er på en målt tilkobling</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="OptionsDialogAutomaticUpdates" xml:space="preserve">
+    <value>Automatiske oppdateringer</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="OptionsDialogCheckForUpdates" xml:space="preserve">
+    <value>Se etter oppdateringer automatisk når du sjekker inn</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="OptionsDialogCheckIn" xml:space="preserve">
+    <value>Sjekk inn</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="OptionsDialogCheckInFrequency" xml:space="preserve">
+    <value>Frekvens</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="OptionsDialogGeneral" xml:space="preserve">
+    <value>Generell</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="OptionsDialogLastCheckInDate" xml:space="preserve">
+    <value>Sist skjedde</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="OptionsDialogLastCheckInTime" xml:space="preserve">
+    <value>På tidspunktet</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="OptionsDialogResetDoNotShowAgain" xml:space="preserve">
+    <value>Tilbakestill ikke vis meg om dette igjen</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="OptionsDialogStartGrindstoneWithWindows" xml:space="preserve">
+    <value>Start Grindstone med Windows</value>
+    <comment>from GoogleTranslator2</comment>
+  </data>
+  <data name="OptionsDialogStartup" xml:space="preserve">
+    <value>Oppstart</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="OptionsDialogSubmitUsageData" xml:space="preserve">
+    <value>Send anonyme bruksdata til Epiforge for å hjelpe til med å forbedre Grindstone når du sjekker inn</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="OptionsDialogUpdate" xml:space="preserve">
+    <value>Oppdater</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="OptionsDialogUsageDataSharing" xml:space="preserve">
+    <value>Deling av bruksdata</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="OptionsDialogWarningDelay" xml:space="preserve">
+    <value>Utsett en kort stund før du kan reagere på advarsler</value>
+    <comment>from GoogleTranslator</comment>
   </data>
   <data name="PasswordCollectionDialogPasswordEmpty" xml:space="preserve">
     <value>Denne databasen er kryptert og krever et passord</value>
@@ -1010,6 +1058,10 @@ Feil: {0}
 
 Offending Formula Expression:
 {1}</value>
+    <comment>from GoogleTranslator2</comment>
+  </data>
+  <data name="StopwatchOperationsEUA" xml:space="preserve">
+    <value>Stoppeklokkeoperasjoner Start fra konteksten til Time Slice Du er for tiden timing.Hvis du vil samle informasjon (f.eksTilknyttet enhet for å aggregere.</value>
     <comment>from GoogleTranslator2</comment>
   </data>
   <data name="ToastMonitoredViewTriggeredText" xml:space="preserve">
@@ -1235,10 +1287,6 @@ Offending Formula Expression:
   </data>
   <data name="WarningDeleteView" xml:space="preserve">
     <value>Hvis du fortsetter, blir den gjeldende visningen og dens kolonner slettet permanent.Oppføringene som vises av det, blir ikke slettet.</value>
-    <comment>from GoogleTranslator2</comment>
-  </data>
-  <data name="StopwatchOperationsEUA" xml:space="preserve">
-    <value>Stoppeklokkeoperasjoner Start fra konteksten til Time Slice Du er for tiden timing.Hvis du vil samle informasjon (f.eksTilknyttet enhet for å aggregere.</value>
     <comment>from GoogleTranslator2</comment>
   </data>
 </root>
